crates/org-edit/tests/snapshots/snapshots__align_all_tags.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* A :x:
* Longer‸ title :y:

----
* A                                                                       :x:
* Longer‸ title                                                            :y:
