crates/org-edit/tests/snapshots/snapshots__change_tag_in_region.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
⁁* A
* B :x:
* C‸

----
* A                                                                     :new:
‸* B                                                                   :x:new:
* C
