crates/org-edit/tests/snapshots/snapshots__checkbox_cookies.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* Tasks [/] [%]
- [ ] a‸
- [X] b

----
* Tasks [2/2] [100%]
- [X] a‸
- [X] b
