crates/org-edit/tests/snapshots/snapshots__demote.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* TODO [#B] Top :work:
** Child ‸b
** Child a
*** Deep
* Other

----
* TODO [#B] Top :work:
*** Child ‸b
** Child a
*** Deep
* Other
