crates/org-edit/tests/snapshots/snapshots__emphasize_region.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
Some ⁁words‸ here.

----
Some *words*‸ here.
