crates/org-edit/tests/snapshots/snapshots__emphasize_remove.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
Some ⁁*words*‸.

----
Some words‸.
