crates/org-edit/tests/snapshots/snapshots__indent_item.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
- [ ] one
- [X] two‸
  - sub
- three

----
- [X] one
  - [X] two‸
  - sub
- three
